Fixed warnings in code